--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,5 +5,5 @@ RUN apt-get update && apt-get install -y python3-tk graphviz && \
 USER devel
 RUN pip install --upgrade pip && pip install matplotlib pydot_ng
 ENV HOME=/home/devel
-ENV DISPLAY= WAYLAND_DISPLAY= XDG_RUNTIME_DIR= PULSE_SERVER= PYTHONPATH=$HOME/workspace
+ENV PYTHONPATH=$HOME/workspace
 WORKDIR $HOME/workspace
