--- a/tensorflow/Dockerfile.gpu
+++ b/tensorflow/Dockerfile.gpu
@@ -1,4 +1,7 @@
-FROM tensorflow/tensorflow:2.15.0-gpu
+ARG BASE_IMAGE=tensorflow/tensorflow
+ARG TF_VERSION=2.15.0
+
+FROM ${BASE_IMAGE}:${TF_VERSION}-gpu as tf-gpu
 
 COPY packages.txt /
 RUN /setup.packages.sh /packages.txt && \
