--- a/tensorflow/.devcontainer/devcontainer.json
+++ b/tensorflow/.devcontainer/devcontainer.json
@@ -6,5 +6,15 @@
 	},
 	"remoteEnv": {
 		"PYTHONPATH": "."
+	},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-python.python",
+				"ms-python.vscode-pylance",
+				"ms-python.black-formatter",
+				"ms-python.isort"
+			]
+		}
 	}
 }
