--- a/tensorflow/.devcontainer/devcontainer.json
+++ b/tensorflow/.devcontainer/devcontainer.json
@@ -7,6 +7,9 @@
 	"remoteEnv": {
 		"PYTHONPATH": "."
 	},
+	"mounts": [
+		{"source": "${localEnv:HOME}/.deep-learning", "target": "/home/devel/.deep-learning", "type": "bind"}
+	],
 	"customizations": {
 		"vscode": {
 			"extensions": [
