--- a/tensorflow/.devcontainer/devcontainer.json
+++ b/tensorflow/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
 				"ms-python.python",
 				"ms-python.vscode-pylance",
 				"ms-python.black-formatter",
-				"ms-python.isort"
+				"ms-python.isort",
+				"alphabotsec.vscode-eclipse-keybindings"
 			]
 		}
 	}
