--- a/pytorch/Dockerfile.dev
+++ b/pytorch/Dockerfile.dev
@@ -5,5 +5,6 @@ FROM ${BASE_IMAGE}:${TAG} as torch-dev
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip -i https://pypi.tuna.tsinghua.edu.cn/simple && \
-    pip install --no-cache-dir matplotlib pydot_ng -i https://pypi.tuna.tsinghua.edu.cn/simple && \
+    pip install --no-cache-dir keras matplotlib pydot_ng -i https://pypi.tuna.tsinghua.edu.cn/simple && \
     pip install --no-cache-dir -r requirements.txt -i https://download.pytorch.org/whl/cpu
+ENV KERAS_BACKEND=torch
