--- a/pytorch/.devcontainer/devcontainer.json
+++ b/pytorch/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
 		"PYTHONPATH": "."
 	},
 	"mounts": [
-		{"source": "${localEnv:HOME}/.deep-learning", "target": "/home/devel/.deep-learning", "type": "bind"}
+		{"source": "${localEnv:HOME}/.deep-learning", "target": "/home/devel/.deep-learning", "type": "bind"},
+		{"source": "${localEnv:HOME}/.keras/datasets", "target": "/home/devel/.keras/datasets", "type": "bind"}
 	],
 	"customizations": {
 		"vscode": {
