--- a/dev-env/tensorflow/Dockerfile.dev
+++ b/dev-env/tensorflow/Dockerfile.dev
@@ -1,7 +1,7 @@
 ARG BASE_IMAGE=tensorflow/tensorflow
 ARG TF_VERSION=2.15.0
 
-FROM ${BASE_IMAGE}:${TF_VERSION} as tf-dev
+FROM ${BASE_IMAGE}:${TF_VERSION}
 
 COPY packages.txt /
 RUN /setup.packages.sh /packages.txt && \
