--- a/dev-env/pytorch/Dockerfile.dev
+++ b/dev-env/pytorch/Dockerfile.dev
@@ -5,6 +5,6 @@ FROM ${BASE_IMAGE}:${TAG}
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip -i https://pypi.tuna.tsinghua.edu.cn/simple && \
-    pip install --no-cache-dir keras matplotlib pydot_ng -i https://pypi.tuna.tsinghua.edu.cn/simple && \
+    pip install --no-cache-dir keras -i https://pypi.tuna.tsinghua.edu.cn/simple && \
     pip install --no-cache-dir -r requirements.txt -i https://download.pytorch.org/whl/cpu
 ENV KERAS_BACKEND=torch
