--- a/dev-env/pytorch/Dockerfile.cpu
+++ b/dev-env/pytorch/Dockerfile.cpu
@@ -4,7 +4,9 @@ ARG TAG=3.11-slim
 FROM ${BASE_IMAGE}:${TAG}
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir --upgrade pip -i https://pypi.tuna.tsinghua.edu.cn/simple && \
-    pip install --no-cache-dir keras -i https://pypi.tuna.tsinghua.edu.cn/simple && \
+ARG PIP_INDEX_URL=""
+ENV PIP_INDEX_URL=${PIP_INDEX_URL}
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir keras && \
     pip install --no-cache-dir -r requirements.txt -i https://download.pytorch.org/whl/cpu
 ENV KERAS_BACKEND=torch
